--- a/Base/Base.vcxproj.filters
+++ b/Base/Base.vcxproj.filters
@@ -162,6 +162,9 @@
     <ClCompile Include="Source\AnimationHelper.cpp">
       <Filter>Animation</Filter>
     </ClCompile>
+    <ClCompile Include="Source\BulletfireSprite.cpp">
+      <Filter>Gameobject</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Source\Application.h">
@@ -265,6 +268,9 @@
     </ClInclude>
     <ClInclude Include="Source\AnimationHelper.h">
       <Filter>Animation</Filter>
+    </ClInclude>
+    <ClInclude Include="Source\BulletfireSprite.h">
+      <Filter>Gameobject</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
