--- a/Base/Base.vcxproj
+++ b/Base/Base.vcxproj
@@ -14,6 +14,7 @@
     <ClCompile Include="Source\Application.cpp" />
     <ClCompile Include="Source\Barrel.cpp" />
     <ClCompile Include="Source\Crate.cpp" />
+    <ClCompile Include="Source\Enemy\Enemy.cpp" />
     <ClCompile Include="Source\Enemy\Zombie.cpp" />
     <ClCompile Include="Source\EntityManager.cpp" />
     <ClCompile Include="Source\FPSCamera.cpp" />
@@ -49,6 +50,7 @@
     <ClInclude Include="Source\Application.h" />
     <ClInclude Include="Source\Barrel.h" />
     <ClInclude Include="Source\Crate.h" />
+    <ClInclude Include="Source\Enemy\Enemy.h" />
     <ClInclude Include="Source\Enemy\Zombie.h" />
     <ClInclude Include="Source\EntityManager.h" />
     <ClInclude Include="Source\FPSCamera.h" />
