--- a/Base/Base.vcxproj.filters
+++ b/Base/Base.vcxproj.filters
@@ -153,6 +153,9 @@
     <ClCompile Include="Source\Enemy\Zombie.cpp">
       <Filter>Enemy</Filter>
     </ClCompile>
+    <ClCompile Include="Source\Enemy\Enemy.cpp">
+      <Filter>Enemy</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Source\Application.h">
@@ -249,6 +252,9 @@
       <Filter>Gameobject\Crate</Filter>
     </ClInclude>
     <ClInclude Include="Source\Enemy\Zombie.h">
+      <Filter>Enemy</Filter>
+    </ClInclude>
+    <ClInclude Include="Source\Enemy\Enemy.h">
       <Filter>Enemy</Filter>
     </ClInclude>
   </ItemGroup>
