--- a/Common/Common.vcxproj
+++ b/Common/Common.vcxproj
@@ -14,6 +14,7 @@
     <ClCompile Include="Source\CameraBase.cpp" />
     <ClCompile Include="Source\Collider\Collider.cpp" />
     <ClCompile Include="Source\EntityBase.cpp" />
+    <ClCompile Include="Source\Gamepad.cpp" />
     <ClCompile Include="Source\GraphicsManager.cpp" />
     <ClCompile Include="Source\KeyboardController.cpp" />
     <ClCompile Include="Source\LightBase.cpp" />
@@ -39,6 +40,7 @@
     <ClInclude Include="Source\CameraBase.h" />
     <ClInclude Include="Source\Collider\Collider.h" />
     <ClInclude Include="Source\EntityBase.h" />
+    <ClInclude Include="Source\Gamepad.h" />
     <ClInclude Include="Source\GraphicsManager.h" />
     <ClInclude Include="Source\KeyboardController.h" />
     <ClInclude Include="Source\LightBase.h" />
