--- a/Base/Base.vcxproj
+++ b/Base/Base.vcxproj
@@ -13,6 +13,7 @@
   <ItemGroup>
     <ClCompile Include="Source\AnimationHelper.cpp" />
     <ClCompile Include="Source\Application.cpp" />
+    <ClCompile Include="Source\AudioManager.cpp" />
     <ClCompile Include="Source\Barrel.cpp" />
     <ClCompile Include="Source\BigTextSprite.cpp" />
     <ClCompile Include="Source\BulletfireSprite.cpp" />
@@ -56,6 +57,7 @@
   <ItemGroup>
     <ClInclude Include="Source\AnimationHelper.h" />
     <ClInclude Include="Source\Application.h" />
+    <ClInclude Include="Source\AudioManager.h" />
     <ClInclude Include="Source\Barrel.h" />
     <ClInclude Include="Source\BigTextSprite.h" />
     <ClInclude Include="Source\BulletfireSprite.h" />
@@ -166,7 +168,7 @@
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <AdditionalLibraryDirectories>$(SolutionDir)$(Configuration);$(SolutionDir)/glfw/lib-msvc100;$(SolutionDir)/glew/lib;$(SolutionDir)/irrKlang/lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
-      <AdditionalDependencies>Common.lib;winmm.lib;opengl32.lib;glu32.lib;glew32.lib;glfw3.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>Common.lib;winmm.lib;opengl32.lib;glu32.lib;glew32.lib;glfw3.lib;irrKlang.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
